Updated base.html file

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -2,16 +2,17 @@
 <html>  
 
 <head>
-    <title> This is the Header</title>
+    <title> Stupendous Sloth</title>
 </head>
 
 <body>  
-    <h1>    This is the body</h1>
+    <h1>    Welcome to the landing page</h1>
+    <h2>    There is nothing here yet it seems! </h2>
 
 </body>
 
 <footer>    
-    <h3>    This is the footer</h3>
+    <h3>    Updates coming soon...</h3>
 
 </footer>
 </html>
