--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -2,17 +2,26 @@
 <html>  
 
 <head>
-    <title> Stupendous Sloth</title>
+    <title> Sloth WSM</title>
 </head>
 
 <body>  
-    <h1>    Welcome to the landing page</h1>
-    <h2>    There is nothing here yet it seems! </h2>
+    <h1>    
+        Welcome to the Stupendous Sloth landing page
+
+    </h1>
+    <h2>   
+         There is nothing here yet it seems! 
+
+    </h2>
 
 </body>
 
 <footer>    
-    <h3>    Updates coming soon...</h3>
+    <h3>    
+        Updates coming soon...
+    
+    </h3>
 
 </footer>
 </html>
